--- a/quiz_2.html
+++ b/quiz_2.html
@@ -12,7 +12,7 @@
 
     <table border="1">
         <tr>
-            <td colspan="6">한국의 차</td>
+            <td colspan="6" style="text-align: center;"><strong>한국의 차</strong></td>
         </tr>
         <tr>
             <td rowspan="6"><strong>뿌리차</strong></td>
